# clashcmd

./: .gitignore  CMakeLists.txt  clashcmd.cc  clashcmd.h  main.cc  make.sh
